<resources>
    <string name="app_name">Stadtbibliothek München</string>

    <string name="ok">Ok</string>

    <string name="settings">Settings</string>
    <string name="media_details">Media Details</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="test">Test</string>

    <string name="tab_title_borrows">Borrows</string>
    <string name="tab_title_search">Search</string>

    <string name="notification_borrow_has_expired">Expired borrow</string>
    <string name="notification_is_going_to_expire_soon" formatted="false">Borrow expires in %d days</string>
    <string name="notification_could_not_check_expirations">Could not check expirations</string>

    <string name="error_title_could_not_get_borrows">Could not get borrows</string>
    <string name="error_title_could_not_do_simple_search">Searching for %s failed</string>

    <string name="fragment_settings_identity_card_number">Identity card number</string>
    <string name="fragment_settings_password">Password</string>
    <string name="fragment_settings_hint_identity_card_number_or_password_not_set">Identity card number or password not set.\nWithout
        app cannot connect to Stadtbibliothek München server.</string>
    <string name="fragment_settings_testing_fritz_box_settings_failed_title">Login to FritzBox failed</string>
    <string name="fragment_settings_testing_fritz_box_settings_succeeded">Login success, settings are correct</string>
    <string name="fragment_setting_periodically_check_for_expired_borrows">Periodically check for expired borrows</string>
    <string name="fragment_setting_time_to_check_for_expirations" formatted="false">%02d:%02d</string>

</resources>
