<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fragment_settings_sections_margin"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrvwContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/appBarLayout"
        android:layout_above="@+id/btnOk"
        android:fillViewport="true"
    >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
        >

            <TextView
                android:id="@+id/txtvwHintIdentityCardNumberOrPasswordNotSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/fragment_settings_sections_margin"
                style="@android:style/TextAppearance.Medium"
                android:text="@string/fragment_settings_hint_identity_card_number_or_password_not_set"
                android:visibility="gone"
            />

            <TextView
                android:id="@+id/txtvwIdentityCardNumberLabel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_settings_labels_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/txtvwHintIdentityCardNumberOrPasswordNotSet"
                android:gravity="center_vertical"
                style="@android:style/TextAppearance.Medium"
                android:text="@string/fragment_settings_identity_card_number"
            />

            <EditText
                android:id="@+id/edtxtIdentityCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fragment_settings_edit_texts_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/fragment_settings_edit_texts_bottom_margin"
                android:layout_below="@id/txtvwIdentityCardNumberLabel"
                android:inputType="number"
            />

            <TextView
                android:id="@+id/txtvwPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_settings_labels_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edtxtIdentityCardNumber"
                android:gravity="center_vertical"
                style="@android:style/TextAppearance.Medium"
                android:text="@string/fragment_settings_password"
            />

            <EditText
                android:id="@+id/edtxtPassword"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fragment_settings_edit_texts_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/txtvwPasswordLabel"
                android:layout_marginBottom="@dimen/fragment_settings_edit_texts_bottom_margin"
                android:inputType="textPassword"
            />

            <Button
                android:id="@+id/btnTestUserSettings"
                android:layout_width="@dimen/fragment_settings_buttons_width"
                android:layout_height="@dimen/fragment_settings_buttons_height"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edtxtPassword"
                android:layout_marginBottom="@dimen/fragment_settings_sections_margin"
                android:text="@string/test"
            />

            <CheckBox
                android:id="@+id/chkbxPeriodicallyCheckForExpiredBorrows"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_settings_edit_texts_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/btnTestUserSettings"
                style="@android:style/TextAppearance.Medium"
                android:text="@string/fragment_setting_periodically_check_for_expired_borrows"
            />

            <TextView
                android:id="@+id/txtvwTimeToCheckForExpirations"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/chkbxPeriodicallyCheckForExpiredBorrows"
                style="@android:style/TextAppearance.Large"
                android:gravity="center"
            />

        </RelativeLayout>

    </ScrollView>


    <Button
        android:id="@+id/btnOk"
        android:layout_width="@dimen/fragment_settings_buttons_width"
        android:layout_height="@dimen/fragment_settings_buttons_height"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/fragment_settings_sections_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@android:string/ok"
    />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/fragment_settings_buttons_width"
        android:layout_height="@dimen/fragment_settings_buttons_height"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btnOk"
        android:layout_alignTop="@+id/btnOk"
        android:layout_alignBottom="@+id/btnOk"
        android:layout_marginRight="@dimen/fragment_settings_cancel_and_ok_button_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@android:string/cancel"
    />

</RelativeLayout>